canarydevelopment/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-green
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-green
  template:
    metadata:
      labels:
        app: canary-green
    spec:
      containers:
      - name: canary-green
        image: adamtravis/rollouts:green
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: canary-service-green
  namespace: foo
spec:
  selector:
    app: canary-green
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
