canarydevelopment/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: foo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/actions.weighted-routing: >
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"canary-service-blue",
              "servicePort":"80",
              "weight":80
            },
            {
              "serviceName":"canary-service-green",
              "servicePort":"80",
              "weight":20
            }
          ]
        }
      }

spec:
  rules:
  - host: echo.stage.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weighted-routing
            port:
              name: use-annotation
